dataset1235/2025-2/805158916/users/1514794398/executions/1584167357_1559799913.log
== SUBMISSION (2025-08-27 15:04:36)
-- CODE: 
numero = int(input("Digite um numero: "))
quadrado = numero**2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
Digite um numero: 4
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
Digite um numero: 0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
Digite um numero: 1000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
Digite um numero: 100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
Digite um numero: 225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
Digite um numero: 14400
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:23:58)
-- CODE: 
numero = int(input("Digite um numero: ")
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:31:22)
-- CODE: 
numero = int(input("Digite um numero: ")
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:50:40)
-- CODE: 
numero = input("Digite um numero: ")
quadrado = numero 
print(n**2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(n**2)
          ^
NameError: name 'n' is not defined
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(n**2)
          ^
NameError: name 'n' is not defined
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(n**2)
          ^
NameError: name 'n' is not defined
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(n**2)
          ^
NameError: name 'n' is not defined
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(n**2)
          ^
NameError: name 'n' is not defined
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(n**2)
          ^
NameError: name 'n' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:50:29)
-- CODE: 
numero = input("Digite um numero: ")
quadrado = numero 
print(**2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(**2)
TypeError: print() argument after ** must be a mapping, not int
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(**2)
TypeError: print() argument after ** must be a mapping, not int
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(**2)
TypeError: print() argument after ** must be a mapping, not int
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(**2)
TypeError: print() argument after ** must be a mapping, not int
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(**2)
TypeError: print() argument after ** must be a mapping, not int
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(**2)
TypeError: print() argument after ** must be a mapping, not int
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:50:31)
-- CODE: 
numero = input("Digite um numero: ")
quadrado = numero 
print(**2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(**2)
TypeError: print() argument after ** must be a mapping, not int
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(**2)
TypeError: print() argument after ** must be a mapping, not int
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(**2)
TypeError: print() argument after ** must be a mapping, not int
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(**2)
TypeError: print() argument after ** must be a mapping, not int
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(**2)
TypeError: print() argument after ** must be a mapping, not int
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(**2)
TypeError: print() argument after ** must be a mapping, not int
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:01:54)
-- CODE: 
numero = input("Digite um numero: ")
quadrado = numero**2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero**2
               ~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero**2
               ~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero**2
               ~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero**2
               ~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero**2
               ~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero**2
               ~~~~~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:04:00)
-- CODE: 
numero = input(float("Digite um numero: "))
quadrado = numero**2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = input(float("Digite um numero: "))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite um numero: '
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = input(float("Digite um numero: "))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite um numero: '
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = input(float("Digite um numero: "))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite um numero: '
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = input(float("Digite um numero: "))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite um numero: '
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = input(float("Digite um numero: "))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite um numero: '
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = input(float("Digite um numero: "))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite um numero: '
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:37:48)
-- CODE: 
numero = int(input("Digite um numero: "))
quadrado = (preco*(1-0.15))
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = (preco*(1-0.15))
                ^^^^^
NameError: name 'preco' is not defined
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = (preco*(1-0.15))
                ^^^^^
NameError: name 'preco' is not defined
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = (preco*(1-0.15))
                ^^^^^
NameError: name 'preco' is not defined
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = (preco*(1-0.15))
                ^^^^^
NameError: name 'preco' is not defined
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = (preco*(1-0.15))
                ^^^^^
NameError: name 'preco' is not defined
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = (preco*(1-0.15))
                ^^^^^
NameError: name 'preco' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:50:47)
-- CODE: 
numero = input("Digite um numero: ")
quadrado = numero 
print(2**2)
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
Digite um numero: 4
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
Digite um numero: 4
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
Digite um numero: 4
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
Digite um numero: 4
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
Digite um numero: 4
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
Digite um numero: 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:01:31)
-- CODE: 
numero = input("Digite um numero: ")
quadrado = numero 
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
Digite um numero: 2
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
Digite um numero: 0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
Digite um numero: 1000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
Digite um numero: -10
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
Digite um numero: -15
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
Digite um numero: 120
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:04:21)
-- CODE: 
numero = float(input("Digite um numero: "))
quadrado = numero**2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
Digite um numero: 4.0
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
Digite um numero: 0.0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
Digite um numero: 1000000.0
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
Digite um numero: 100.0
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
Digite um numero: 225.0
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
Digite um numero: 14400.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:50:31)
-- CODE: 
numero = input("Digite um numero: ")
quadrado = numero 
print(**2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(**2)
TypeError: print() argument after ** must be a mapping, not int
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(**2)
TypeError: print() argument after ** must be a mapping, not int
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(**2)
TypeError: print() argument after ** must be a mapping, not int
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(**2)
TypeError: print() argument after ** must be a mapping, not int
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(**2)
TypeError: print() argument after ** must be a mapping, not int
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(**2)
TypeError: print() argument after ** must be a mapping, not int
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:37:29)
-- CODE: 
numero = int(input("Digite um numero: ")
quadrado = (preco*(1-0.15))
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = int(input("Digite um numero: ")
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
